<resources>
    <string name="app_name">Math Quiz</string>
    <string name="plus">+</string>
    <string name="minus">−</string>
    <string name="multiply">×</string>
    <string name="division">÷</string>
    <string name="level1">Level 1</string>
    <string name="level2">Level 2</string>
    <string name="level3">Level 3</string>
    <string name="level4">Level 4</string>
    <string name="right_count">Right Answer :</string>
    <string name="wrong_count">Wrong Answer :</string>
    <string name="answer_check">Check</string>
    <string name="rewrite">Rewrite</string>
    <string name="replay">Try again</string>
    <string name="back_main">Main</string>
    <string name="wrong_list">Wrong answer list</string>
    <string name="right_answer">Right Answer</string>
    <string name="warning_msg">⚠ Incorrect list is not saved ⚠</string>
    <string name="user_input_number">Wrong Answer</string>
    <string name="back_page">back_page</string>
    <string name="hello_blank_fragment">blank fragment</string>
    <string name="select_work">Please select one of the operations below.</string>
    <string name="select_level">Please select a level.</string>
    <string name="answer_info">"How to enter the correct answer: "</string>
    <string name="erase_doodles">" Please fill it out in order from the left."</string>
    <string name="total_info">out of ten questions</string>

</resources>