<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_blue"
    tools:context=".WrongAnswerActivity">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/left"
        android:contentDescription="@string/back_page"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/rv_wrong_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wrong_answer_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="@string/wrong_list"
        android:textColor="#2979FF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/rv_wrong_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/green_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right_answer"
        android:textColor="@color/green"
        app:layout_constraintBottom_toTopOf="@id/red_sign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/wrong_answer_list"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/red_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_input_number"
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/warning_msg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/wrong_answer_list"
        app:layout_constraintTop_toBottomOf="@id/green_sign" />

    <TextView
        android:id="@+id/warning_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/warning_msg"
        android:textAlignment="center"
        android:textColor="#2F00FF"
        app:layout_constraintBottom_toTopOf="@id/rv_wrong_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_wrong_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/warning_msg" />

</androidx.constraintlayout.widget.ConstraintLayout>