<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_blue"
    >

    <Button
        android:id="@+id/btn_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/left"
        android:contentDescription="@string/back_page"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/total_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/current_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:text="1"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/total_count"
        app:layout_constraintEnd_toStartOf="@id/total_count" />

    <TextView
        android:id="@+id/total_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="/ 10"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/fragment_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/drawingView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/total_count">

    </FrameLayout>

    <com.yellowh.mathquiz.draw.PracticeView
        android:id="@+id/practiceView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/example_msg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back" />

    <Button
        android:id="@+id/btn_practice_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_round"
        android:text="@string/erase_doodles"
        android:textSize="15sp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/total_count"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/example_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_info"
        android:textAlignment="center"
        android:textColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/practiceView"
        app:layout_constraintBottom_toTopOf="@id/drawingView"
        app:layout_constraintEnd_toEndOf="@id/practiceView"
        app:layout_constraintStart_toStartOf="@id/practiceView" />

    <com.yellowh.mathquiz.draw.DrawingView
        android:id="@+id/drawingView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edge"
        app:layout_constraintBottom_toTopOf="@id/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/example_msg" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_round"
        android:text="@string/rewrite"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/check"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/check"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_round"
        android:text="@string/answer_check"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel" />

    <ImageView
        android:id="@+id/o"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/circle_green"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/x_red"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>